<resources>
    <string name="app_name">IntentExercise</string>
    <string name="message_hint">Enter your message</string>
    <string name="message">Message: </string>
    <string name="send">Send</string>
    <string name="done">Done</string>
    <string name="second">Second</string>
    <string name="number_hint">Enter your lucky number</string>
    <string name="lucky_number">Your lucky number: </string>
    <string name="reply">Your reply: </string>
    <string name="call">Call me 0123456789</string>
    <string name="web">Visit my Twitter</string>
</resources>
